ui(news): add a class prop to stop an individual news item from overflowing its parent (#753)

--- a/client-app/src/examples/news/NewsPanelItem.scss
+++ b/client-app/src/examples/news/NewsPanelItem.scss
@@ -1,4 +1,8 @@
 .tb-news-panel {
+  & .ag-row {
+    overflow: hidden;
+  }
+
   .news-item {
     p,
     span {
